# photonvision

coral/: CMakeLists.txt
coral/src/main/java/org/photonvision/coral/: CoralJNI.java
coral/src/main/native/cpp/: coral_jni.cpp  coral_jni.h
coral/src/native/cpp/: CoralJNI.cpp  CoralJNI.h
photon-core/src/main/java/org/photonvision/common/configuration/: NeuralNetworkModelManager.java
photon-core/src/main/java/org/photonvision/jni/: CoralJNI.java  CoralObjectDetector.java
photon-core/src/main/java/org/photonvision/vision/objects/: CoralModel.java
photon-server/src/main/java/org/photonvision/: Main.java
